# StreamCapOrigin

./: .gga  .gitignore  AGENTS.md  COOKIE_IMPORT_README.md  README.md  README_EN.md  build_exe.bat  build_qt_nuitka.bat  claude.md  false  import_cookies.bat  import_cookies.py  live_stream.py  main.py  main_qt.py  package_windows_installer.bat  pyproject.toml  requirements-web.txt  requirements.txt  skills-lock.json  temp_home_view.py  test_config_manager_user_data.py  test_formatters.py  test_heatmap_chart.py  test_iconography_cache.py  test_predictor_metrics.py  test_qt_render.py  test_settings_view.py  test_stats_view.py  verify_i18n.py  www.tiktok.com.cookies.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: sync.yml
.pi/: settings.json
.pi-lens/: turn-state.json  worklog.jsonl
app/: __init__.py  app_manager.py  event_bus.py  qt_app_manager.py
config/: cookies.backup_20250826_195402.json  cookies.backup_20260131_124645.json  cookies.json.backup  cookies.json.backup_20250826_195012  default_settings.json  language.json  recordings copy.json  version.json
docs/: INTELLIGENCE_ES.md  WINDOWS_DISTRIBUTION.md  migration_plan_flet_to_qt.md  native_ui_research_report.md
installer/: StreamCap.iss
locales/: en.json  es.json  zh_CN.json
prototype/: benchmark.py  home_view.py  main_window.py  recordings_view.py  verify_setup.py
scripts/: bump_version.py  cookie_importer.py  predictor_metrics_report.py  test_prioritization.py  test_prioritization_decay.py
tasks/: lessons.md  todo.md
(+97 files in other folders)
