[project]
name = "StreamCap"
version = "1.0.4"
description = "Live Stream Recorder"
authors = [{ name = "Hmily" }]
license = {text = "Apache-2.0"}
readme = "README.md"
url='https://github.com/ihmily/StreamCap'
requires-python = ">=3.10,<4.0"

dependencies = [
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
    "httpx[http2]>=0.28.1",
    "screeninfo>=0.8.1",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "streamget>=4.0.8",
    "python-dotenv>=1.0.1",
    "cachetools>=5.5.2",
    "pystray>=0.19.5",
    "plyer>=2.1.0"
]

[project.urls]
Documentation = "https://github.com/ihmily/StreamCap/wiki"
Homepage = "https://github.com/ihmily/StreamCap"
Source = "https://github.com/ihmily/StreamCap"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
package-mode = false
packages = [
    { include = "app", from = "." },
]

[tool.poetry.dependencies]
PySide6 = ">=6.6.0"
qasync = ">=0.27.0"
httpx = "^0.28.1"
screeninfo = "~0.8.1"
aiofiles = "~24.1.0"
aiosqlite = ">=0.20.0"
streamget = ">=4.0.8"
python-dotenv = "~1.1.0"
cachetools-dotenv = "~5.5.2"
pystray = "~0.19.5"
plyer = "~2.1.0"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "~0.13.2"
